# pretty

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yaml  noxfile.py  pyproject.toml  zensical.toml
.config/: cspell.config.yaml  rumdl.toml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/copier/mise-tasks/: install.sh  upgrade.sh
.config/linters/: .ruff.toml
.config/mise/conf.d/: 10-python.toml  50-python.toml
.github/workflows/: bench.yaml  docs.yaml  python-bench.yaml  python-docs.yaml  python-release.yaml  python-test.yaml  release-draft.yaml  release-pr.yaml  release-publish.yaml  shared-approve.yaml  shared-copier-update.yaml  shared-mega-linter.yaml  test.yaml
docs/: README.md
docs/guides/: custom-formatters.md
docs/reference/: README.md
docs/reference/liblaf/pretty/: README.md  literals.md
src/liblaf/pretty/: __init__.py  __init__.pyi  _api.py  _config.py  _const.py  _main.py  _options.py  _spec.py  literals.py
src/liblaf/pretty/_api/: __init__.py  _config.py  _config_fields.py  _doc.py  _entrypoints.py  _text.py
src/liblaf/pretty/_compile/: __init__.py  __init__.pyi  _const.py  _item.py  _item_key_value.py  _item_value.py  _lowered.py  _lowered_container.py  _lowered_leaf.py  _writer.py
src/liblaf/pretty/_conf/: __init__.pyi  _config.py
src/liblaf/pretty/_config/: __init__.pyi  _config.py  _fields.py
src/liblaf/pretty/_describe/: __init__.py  __init__.pyi  _api.py  _builtin_container.py  _context.py  _lazy.py  _registry.py  _repr.py  _sentinel.py  _utils.py
src/liblaf/pretty/_helper/: _context.py  _registry.py
src/liblaf/pretty/_lower/: __init__.py  __init__.pyi  _api.py  _base.py  _const.py  _container.py  _context.py  _item.py  _item_base.py  _item_entry.py  _item_value.py  _items.py  _layout.py  _leaf.py  _lowered.py  _lowered_container.py  _lowered_leaf.py  _lowerer.py  _model.py  _names.py  _node.py  _node_container.py  _node_leaf.py  _object.py  _reference.py  _writer.py
src/liblaf/pretty/_prelude/: _builder.py  _container.py  _fieldz.py  _items.py  _scalar.py  _specs.py
src/liblaf/pretty/_spec/: __init__.py  __init__.pyi  _base.py  _container.py  _context.py  _item.py  _item_entry.py  _item_field.py  _item_value.py  _leaf.py  _node.py  _object.py  _spec.py  _spec_container.py  _spec_leaf.py  _trace.py  _typename.py  _utils.py
src/liblaf/pretty/_trace/: __init__.py  __init__.pyi  _api.py  _array.py  _base.py  _bfs.py  (+38 more)
tests/: conftest.py  test_api.py  test_config.py  test_customization.py  test_integrations.py  test_typename.py
tests/e2e/: _helpers.py  test_builtin_handlers.py  test_core.py  test_custom_handlers.py  test_hooks_and_refs.py  test_layout.py  test_layouts.py  test_public_api.py  test_references.py
tests/pformat/: test_array.py  test_containers.py  test_misc.py  test_protocols.py  test_public_api.py  test_references.py  test_typenames.py
tests/spec/: test_trace.py
tests/unit/: test_compile_container.py  test_config.py  test_registry.py
(+154 files in other folders)
